Fix: padding and align issues

--- a/src/pages/Research/Research.scss
+++ b/src/pages/Research/Research.scss
@@ -4,7 +4,6 @@
 	.research-media-wrapper {
 		position: relative;
 		max-width: 400px;
-		margin-left: -24px;
 
 		img,
 		video {
